--- a/documentation.html
+++ b/documentation.html
@@ -2543,7 +2543,7 @@
 
                     <section class="docs-section" id="item-6-0-2">
 						<h4 class="pt-3"><i class="fas fa-question-circle me-1"></i>Is CodeRed Free?</h4>
-						<p>Yes, CodeRed and all of its features are completely free for anyone to use; and always will be free.</p>
+						<p>Yes, CodeRed and its features are completely free for anyone to use; and always will be free.</p>
                     </section>
 
                     <section class="docs-section" id="item-6-0-3">
