--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-3">Version 2.7.3</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-2">Version 2.7.2</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-1">Version 2.7.1</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-0">Version 2.7.0</a></li>
@@ -189,6 +190,15 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-7-3">
+                            <h2 class="section-heading">Version 2.7.3 (August 20th 2025)</h2>
+                            <h5>- Added two new json keys for the population tracker, "OnlinePlayers" which are the total online players authed in, and "PlaylistPlayers" which are players actually playing in game modes (including offline and online).</h5>
+                            <h5>- Added safety checks related to image sizes when loading custom textures, to prevent loading images that are bigger than what can actually be displayed.</h5>
+                            <h5>- Fixed a crash that happened on injection if CodeRed tried to access file paths that had non UTF8 characters in them, such as emojis.</h5>
+                            <h5>- Fixed titles not applying to profiles in custom workshop maps.</h5>
+                            <h5>- Updated internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-7-2">
                             <h2 class="section-heading">Version 2.7.2 (July 29th 2025)</h2>
