--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-4">Version 2.7.4</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-3">Version 2.7.3</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-2">Version 2.7.2</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-1">Version 2.7.1</a></li>
@@ -190,6 +191,15 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-7-4">
+                            <h2 class="section-heading">Version 2.7.4 (August 31st 2025)</h2>
+                            <h5>- Added a proper Terms Of Use and Privacy Policy to the mod, which will popup if you haven't agreed to it upon injection.</h5>
+                            <h5>- Added a new "Main Menu" tab to the dashboard and moved the main menu related settings from the interface tab to here, this is to make room for future features.</h5>
+                            <h5>- Added an option for custom styles that change how color pickers are displayed, you can now pick between a hue bar or hue wheel.</h5>
+                            <h5>- Fixed the CodeRed version number being wrong as of the last update.</h5>
+                            <h5>- Other minor internal bug fixes and changes to the DirectX hook.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-7-3">
                             <h2 class="section-heading">Version 2.7.3 (August 20th 2025)</h2>
