--- a/documentation.html
+++ b/documentation.html
@@ -1579,7 +1579,7 @@
                                 <tbody>
                                     <tr>
                                         <th class="theme-bg-light"><b>presence_discord_apply &lttrue-false&gt</b></th>
-                                        <td>Enables the use of CodeRed's custom Discord rich presence integration.</td>
+                                        <td>Enables the use of CodeRed's custom Discord rich presence integration, may require running the game as admin if it's not working for you.</td>
                                     </tr>
                                     <tr>
                                         <th class="theme-bg-light"><b>presence_discord_fallback &lttrue-false&gt</b></th>
