--- a/changelog.html
+++ b/changelog.html
@@ -192,6 +192,13 @@
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
 
+                        <section class="docs-section" id="item-3-7-5">
+                            <h2 class="section-heading">Version 2.7.5 (September 12th 2025)</h2>
+                            <h5>- Fixed Discord rich presence integration not working for some users on Epic due to a thread racing issue.</h5>
+                            <h5>- Multiple bug fixes and improvements to Discord rich presence related to ranks and the small text field.</h5>
+                            <h5>- Experimental bug fixes related to the <code>stadium_legacy_clubs</code> setting for 1v1 matches.</h5>
+                        </section>
+
                         <section class="docs-section" id="item-3-7-4">
                             <h2 class="section-heading">Version 2.7.4 (August 31st 2025)</h2>
                             <h5>- Added a proper Terms Of Use and Privacy Policy to the mod, which will popup if you haven't agreed to it upon injection.</h5>
