--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,8 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-6">Version 2.7.6</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-5">Version 2.7.5</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-4">Version 2.7.4</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-3">Version 2.7.3</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-2">Version 2.7.2</a></li>
@@ -191,6 +193,14 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-7-6">
+                            <h2 class="section-heading">Version 2.7.6 (September 17th 2025)</h2>
+                            <h5>- Added the new "Boostfield Mall (Day)" map to Discord rich presence integration and the main menu background changer.</h5>
+                            <h5>- Fixed your CodeRed loadout not applying on the main menu if you were customizing your avatar border or banner in game.</h5>
+                            <h5>- Fixed some instances where the goal explosion previewer could get stuck in the wrong camera state on the main menu.</h5>
+                            <h5>- Updated internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-7-5">
                             <h2 class="section-heading">Version 2.7.5 (September 11th 2025)</h2>
