--- a/changelog.html
+++ b/changelog.html
@@ -206,7 +206,7 @@
                             <h2 class="section-heading">Version 2.7.5 (September 11th 2025)</h2>
                             <h5>- Fixed Discord rich presence integration not working for some users on Epic due to a thread racing issue.</h5>
                             <h5>- Multiple bug fixes and improvements to Discord rich presence related to ranks and the small text field.</h5>
-                            <h5>- Experimental bug fixes related to the <code>stadium_legacy_clubs</code> setting for 1v1 matches.</h5>
+                            <h5>- Multiple bug fixes related to the <code>stadium_legacy_clubs</code> setting for 1v1 matches.</h5>
                         </section>
 
                         <section class="docs-section" id="item-3-7-4">
