--- a/changelog.html
+++ b/changelog.html
@@ -49,7 +49,7 @@
                         </form>
                     </div> -->
 					<ul class="social-list list-inline mx-md-4 mx-lg-4 mb-0 d-none d-lg-flex">
-			            <li class="list-inline-item"><a href="https://discord.gg/t4SjXjEhk3"><i class="fab fa-discord fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a href="https://discord.gg/FzEc7mFwjz"><i class="fab fa-discord fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 		            </ul>
 		           <a href="https://github.com/CodeRedModding/CodeRed-Launcher/releases/latest" class="btn btn-primary d-none d-lg-flex">Download</a>
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-7">Version 2.7.7</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-6">Version 2.7.6</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-5">Version 2.7.5</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-4">Version 2.7.4</a></li>
@@ -193,6 +194,18 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-7-7">
+                            <h2 class="section-heading">Version 2.7.7 (September 29th 2025)</h2>
+                            <h5>- Added two new default themes, "Pink Bubblegum", and "Blueberry Lavender".</h5>
+                            <h5>- Added customization support for the new "Ranked Quads" playlist in the textures tab.</h5>
+                            <h5>- Added a new setting <code>imgui_terminal_history</code> which lets you change the max command history for the terminal.</h5>
+                            <h5>- Renamed the <code>imgui_terminal_buffer</code> setting to <code>imgui_terminal_lines</code>.</h5>
+                            <h5>- Fixed Discord rich presence being stuck saying if you won or lost from the previous match if you entered an intermission game.</h5>
+                            <h5>- Fixed a crash with the reflector window related to reading structs in TArrays that were in nested properties.</h5>
+                            <h5>- Fixed a text wrapping mistake in the Terms Of Use window.</h5>
+                            <h5>- Internal optimizations and memory improvements.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-7-6">
                             <h2 class="section-heading">Version 2.7.6 (September 17th 2025)</h2>
@@ -1254,7 +1267,7 @@
 			    <footer class="footer">
 				    <div class="container text-center py-5">
 				        <ul class="social-list list-unstyled pt-4 mb-0">
-							<li class="list-inline-item"><a href="https://discord.gg/t4SjXjEhk3"><i class="fab fa-discord fa-fw"></i></a></li>
+							<li class="list-inline-item"><a href="https://discord.gg/FzEc7mFwjz"><i class="fab fa-discord fa-fw"></i></a></li>
 							<li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 				        </ul>
                         <h4 class="copyright" style="color:#80848E">CodeRed is a product created and owned by ItsBranK.</h4>
