--- a/documentation.html
+++ b/documentation.html
@@ -49,7 +49,7 @@
                         </form>
                     </div> -->
 					<ul class="social-list list-inline mx-md-4 mx-lg-4 mb-0 d-none d-lg-flex">
-			            <li class="list-inline-item"><a href="https://discord.gg/t4SjXjEhk3"><i class="fab fa-discord fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a href="https://discord.gg/FzEc7mFwjz"><i class="fab fa-discord fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 		            </ul>
 		           <a href="https://github.com/CodeRedModding/CodeRed-Launcher/releases/latest" class="btn btn-primary d-none d-lg-flex">Download</a>
@@ -318,8 +318,12 @@
                                         <td>Selects and applies a loaded ImGui style by its name.</td>
                                     </tr>
                                     <tr>
-                                        <th class="theme-bg-light"><b>imgui_terminal_buffer &lt32-1024&gt</b></th>
-                                        <td>Change the max user history size for the terminal.</td>
+                                        <th class="theme-bg-light"><b>imgui_terminal_lines &lt32-1024&gt</b></th>
+                                        <td>The the max lines of text that can be displayed the terminal.</td>
+                                    </tr>
+                                                                        <tr>
+                                        <th class="theme-bg-light"><b>imgui_terminal_history &lt4-256&gt</b></th>
+                                        <td>The the max user input history that can be stored in the terminal.</td>
                                     </tr>
                                     <tr>
                                         <th class="theme-bg-light"><b>imgui_terminal_scroll &lttrue-false&gt</b></th>
@@ -2586,7 +2590,7 @@
 			    <footer class="footer">
 				    <div class="container text-center py-5">
 				        <ul class="social-list list-unstyled pt-4 mb-0">
-							<li class="list-inline-item"><a href="https://discord.gg/t4SjXjEhk3"><i class="fab fa-discord fa-fw"></i></a></li>
+							<li class="list-inline-item"><a href="https://discord.gg/FzEc7mFwjz"><i class="fab fa-discord fa-fw"></i></a></li>
 							<li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 				        </ul>
                         <h4 class="copyright" style="color:#80848E">CodeRed is a product created and owned by ItsBranK.</h4>
