--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </form>
                     </div> -->
 					<ul class="social-list list-inline mx-md-4 mx-lg-4 mb-0 d-none d-lg-flex">
-			            <li class="list-inline-item"><a href="https://discord.gg/t4SjXjEhk3"><i class="fab fa-discord fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a href="https://discord.gg/FzEc7mFwjz"><i class="fab fa-discord fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 		            </ul>
 		           <a href="https://github.com/CodeRedModding/CodeRed-Launcher/releases/latest" class="btn btn-primary d-none d-lg-flex">Download</a>
@@ -58,7 +58,7 @@
 			<h4 class="mb-2 text-light mb-3">A lightweight, user-friendly enhancement for Rocket League.</h4>
 		    <div class="section-intro text-white mb-3 single-col-max mx-auto">CodeRed is now in beta and free to use! We are looking for play testers to report bugs or request features, if you'd like to try it out join our Discord server for more information!</div>
 		    <div class="pt-3 text-center">
-			    <a class="btn btn-light" href="https://discord.gg/t4SjXjEhk3">Join the Discord <i class="fab fa-discord fa-fw"></i></a>
+			    <a class="btn btn-light" href="https://discord.gg/FzEc7mFwjz">Join the Discord <i class="fab fa-discord fa-fw"></i></a>
 		    </div>
 	    </div>
     </div>
