--- a/arguments.html
+++ b/arguments.html
@@ -49,7 +49,7 @@
                         </form>
                     </div> -->
 					<ul class="social-list list-inline mx-md-4 mx-lg-4 mb-0 d-none d-lg-flex">
-			            <li class="list-inline-item"><a href="https://discord.gg/t4SjXjEhk3"><i class="fab fa-discord fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a href="https://discord.gg/FzEc7mFwjz"><i class="fab fa-discord fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 		            </ul>
 		           <a href="https://github.com/CodeRedModding/CodeRed-Launcher/releases/latest" class="btn btn-primary d-none d-lg-flex">Download</a>
@@ -1218,7 +1218,7 @@
 			    <footer class="footer">
 				    <div class="container text-center py-5">
 				        <ul class="social-list list-unstyled pt-4 mb-0">
-							<li class="list-inline-item"><a href="https://discord.gg/t4SjXjEhk3"><i class="fab fa-discord fa-fw"></i></a></li>
+							<li class="list-inline-item"><a href="https://discord.gg/FzEc7mFwjz"><i class="fab fa-discord fa-fw"></i></a></li>
 							<li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 				        </ul>
                         <h4 class="copyright" style="color:#80848E">CodeRed is a product created and owned by ItsBranK.</h4>
