--- a/changelog.html
+++ b/changelog.html
@@ -199,7 +199,7 @@
                             <h2 class="section-heading">Version 2.7.7 (September 29th 2025)</h2>
                             <h5>- Added two new default themes, "Pink Bubblegum", and "Blueberry Lavender".</h5>
                             <h5>- Added customization support for the new "Ranked Quads" playlist in the textures tab.</h5>
-                            <h5>- Added a new setting <code>imgui_terminal_history</code> which lets you change the max command history for the terminal.</h5>
+                            <h5>- Added a new setting <code>imgui_terminal_history</code> which lets you change the max user history for the terminal.</h5>
                             <h5>- Renamed the <code>imgui_terminal_buffer</code> setting to <code>imgui_terminal_lines</code>.</h5>
                             <h5>- Fixed Discord rich presence being stuck saying if you won or lost from the previous match if you entered an intermission game.</h5>
                             <h5>- Fixed a crash with the reflector window related to reading structs in TArrays that were in nested properties.</h5>
