--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-8">Version 2.7.8</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-7">Version 2.7.7</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-6">Version 2.7.6</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-5">Version 2.7.5</a></li>
@@ -194,6 +195,11 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-7-8">
+                            <h2 class="section-heading">Version 2.7.8 (October 1st 2025)</h2>
+                            <h5>- Updated internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-7-7">
                             <h2 class="section-heading">Version 2.7.7 (September 29th 2025)</h2>
