--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-9">Version 2.7.9</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-8">Version 2.7.8</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-7">Version 2.7.7</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-6">Version 2.7.6</a></li>
@@ -195,6 +196,12 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-7-9">
+                            <h2 class="section-heading">Version 2.7.9 (October 6th 2025)</h2>
+                           <h5>- Fixed banners and borders not applying on the main menu as of the last update.</h5>
+                            <h5>- Other minor miscellaneous bug fixes.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-7-8">
                             <h2 class="section-heading">Version 2.7.8 (October 1st 2025)</h2>
