--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-1">Version 2.8.1</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-0">Version 2.8.0</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-9">Version 2.7.9</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-8">Version 2.7.8</a></li>
@@ -197,6 +198,12 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-1">
+                            <h2 class="section-heading">Version 2.8.1 (October 17th 2025)</h2>
+                            <h5>- When will psyonix stop breaking more than they fix every single update? This is their third hotfix now.</h5>
+                            <h5>- Updated the internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-0">
                             <h2 class="section-heading">Version 2.8.0 (October 14th 2025)</h2>
