--- a/documentation.html
+++ b/documentation.html
@@ -330,6 +330,10 @@
                                         <td>Auto scroll to the most recently added text in the terminal.</td>
                                     </tr>
                                     <tr>
+                                        <th class="theme-bg-light"><b>imgui_terminal_cout &lttrue-false&gt</b></th>
+                                        <td>Also send all text from the terminal to "std::cout".</td>
+                                    </tr>
+                                    <tr>
                                         <th class="theme-bg-light"><b>imgui_scanner_duplicates &lttrue-false&gt</b></th>
                                         <td>Hide or show duplicate entries in the function scanner.</td>
                                     </tr>
