--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-2">Version 2.8.2</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-1">Version 2.8.1</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-0">Version 2.8.0</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-7-9">Version 2.7.9</a></li>
@@ -198,6 +199,15 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-2">
+                            <h2 class="section-heading">Version 2.8.2 (October 24th 2025)</h2>
+                            <h5>- Added a new setting <code>imgui_terminal_cout</code> which will also write all terminal text to "std::cout".</h5>
+                            <h5>- Added a "version mismatch" detection system if you are in game and a Rocket League update is released.</h5>
+                            <h5>- Fixed none of the custom chat commands working as of the last Rocket League update.- Fixed server side custom titles not working as of the last Rocket League update.</h5>
+                            <h5>- Safety improvements to multi-threaded commands and terminal logging.</h5>
+                            <h5>- Updated the internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-1">
                             <h2 class="section-heading">Version 2.8.1 (October 17th 2025)</h2>
