--- a/arguments.html
+++ b/arguments.html
@@ -713,6 +713,10 @@
                                     <th class="theme-bg-light"><b>database_title_glowcolor</b></th>
                                     <td>#E8E8E8</td>
                                 </tr>
+                                <tr>
+                                    <th class="theme-bg-light"><b>database_title_sort_priority</b></th>
+                                    <td>10</td>
+                                </tr>
                             </tbody>
                         </table>
 					</section>
