--- a/documentation.html
+++ b/documentation.html
@@ -337,7 +337,11 @@
                                         <th class="theme-bg-light"><b>imgui_scanner_duplicates &lttrue-false&gt</b></th>
                                         <td>Hide or show duplicate entries in the function scanner.</td>
                                     </tr>
-                                       <tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>imgui_scanner_flags &lttrue-false&gt</b></th>
+                                        <td>Include function flags in string format when copying to your clipboard or saving to a file.</td>
+                                    </tr>
+                                    <tr>
                                         <th class="theme-bg-light"><b>imgui_scanner_origin &lttrue-false&gt</b></th>
                                         <td>Hide or show function call origins in the function scanner (ProcessEvent, ProcessInternal, and CallFunction).</td>
                                     </tr>
