--- a/documentation.html
+++ b/documentation.html
@@ -62,7 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-1"><span class="theme-icon-holder me-2"><i class="fas fa-image"></i></span>Previews</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-0-1">Menus</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-0-1">Menu Previews</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-0-2">Screenshots</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-2"><span class="theme-icon-holder me-2"><i class="fas fa-download"></i></span>Installing</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-2-0-1">Download</a></li>
@@ -122,22 +122,22 @@
 		    <div class="container">
 			    <article class="docs-article" id="section-1">
 				     <section class="docs-section" id="item-1-0-1">
-						<h2 class="section-heading">Menus</h2>		
+						<h2 class="section-heading">Menu Previews</h2>		
                         <div class="simplelightbox-gallery row mb-3">
                             <div class="col-12 col-md-4 mb-3">
                                 <a href="assets/images/previews/dashboard-1.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/dashboard-1.png" alt="" title=""/></a>
                             </div>
                             <div class="col-12 col-md-4 mb-3">
-                                <a href="assets/images/previews/dashboard-2.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/dashboard-2.png" alt="" title=""/></a>
+                                <a href="assets/images/previews/dashboard-3.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/dashboard-3.png" alt="" title=""/></a>
+                            </div>
+                            <div class="col-12 col-md-4 mb-3">
+                                <a href="assets/images/previews/dashboard-4.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/dashboard-4.png" alt="" title=""/></a>
                             </div>
                             <div class="col-12 col-md-4 mb-3">
                                 <a href="assets/images/previews/dashboard-5.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/dashboard-5.png" alt="" title=""/></a>
                             </div>
                             <div class="col-12 col-md-4 mb-3">
                                 <a href="assets/images/previews/dashboard-6.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/dashboard-6.png" alt="" title=""/></a>
-                            </div>
-                            <div class="col-12 col-md-4 mb-3">
-                                <a href="assets/images/previews/dashboard-8.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/dashboard-8.png" alt="" title=""/></a>
                             </div>
                             <div class="col-12 col-md-4 mb-3">
                                 <a href="assets/images/previews/terminal-1.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/terminal-1.png" alt="" title=""/></a>
@@ -151,7 +151,7 @@
                                 <a href="assets/images/previews/styles-1.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/styles-1.png" alt="" title=""/></a>
                             </div>
                             <div class="col-12 col-md-4 mb-3">
-                                <a href="assets/images/previews/styles-2.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/styles-2.png" alt="" title=""/></a>
+                                <a href="assets/images/previews/effects-1.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/effects-1.png" alt="" title=""/></a>
                             </div>
                             <div class="col-12 col-md-4 mb-3">
                                 <a href="assets/images/previews/mmr-1.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/previews/mmr-1.png" alt="" title=""/></a>
