--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-4">Version 2.8.4</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-3">Version 2.8.3</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-2">Version 2.8.2</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-1">Version 2.8.1</a></li>
@@ -200,6 +201,11 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-4">
+                            <h2 class="section-heading">Version 2.8.4 (November 1st 2025)</h2>
+                            <h5>- Fixed an edge case crash that could happen between loading screens related to web requests.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-3">
                             <h2 class="section-heading">Version 2.8.3 (October 29th 2025)</h2>
