--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-5">Version 2.8.5</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-4">Version 2.8.4</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-3">Version 2.8.3</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-2">Version 2.8.2</a></li>
@@ -201,6 +202,14 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-5">
+                            <h2 class="section-heading">Version 2.8.5 (November 8th 2025)</h2>
+                            <h5>- Upgraded the internal ImGui framework to version 1.92.4, which changes how fonts are rasterized and rendered.</h5>
+                            <h5>- Added over a dozen new setting and color options for custom styles that came with the new ImGui version.</h5>
+                            <h5>- Improvements and crash fixes to users that had UTF32 characters in their computer or system path name.</h5>
+                            <h5>- Safety improvements to parsing custom styles and applying colors.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-4">
                             <h2 class="section-heading">Version 2.8.4 (November 1st 2025)</h2>
