--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-6">Version 2.8.6</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-5">Version 2.8.5</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-4">Version 2.8.4</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-3">Version 2.8.3</a></li>
@@ -202,6 +203,15 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-6">
+                            <h2 class="section-heading">Version 2.8.6 (November 20th 2025)</h2>
+                            <h5>- Added a new command <code>interface_click_startmenu</code>, which clicks past the start menu for you.</h5>
+                            <h5>- Added a new setting <code>autorun_delay</code>, which is the delay in seconds before "AutoRun.cr" is called after injection.</h5>
+                            <h5>- Added a new setting for the reflector window <code>imgui_reflector_guid</code>, which toggles between displaying FGuids as four integers or as strings.</h5>
+                            <h5>- Fixed custom titles sometimes not showing up in the dashboard if you had more than eight created.</h5>
+                            <h5>- Updated the internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-5">
                             <h2 class="section-heading">Version 2.8.5 (November 8th 2025)</h2>
