--- a/documentation.html
+++ b/documentation.html
@@ -370,6 +370,10 @@
                                         <td>Don't read from TArray properties when loading instances with the reflector window.</td>
                                     </tr>
                                     <tr>
+                                        <th class="theme-bg-light"><b>imgui_reflector_guid &lttrue-false&gt</b></th>
+                                        <td>Display FGuids in string format instead of integer in the reflector window.</td>
+                                    </tr>
+                                    <tr>
                                         <th class="theme-bg-light"><b>imgui_reflector_object_limit &lt1-256&gt</b></th>
                                         <td>The limit of object instances to search for and display with the reflector window.</td>
                                     </tr>
@@ -516,6 +520,10 @@
                                     <tr>
                                         <th class="theme-bg-light"><b>auto_purge_logs &lttrue-false&gt</b></th>
                                         <td>Automatically deletes old "Launch.log" backups in your log folder on game launch.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>autorun_delay &lt1-300&gt</b></th>
+                                        <td>Delay in seconds before calling your custom auto run variables.</td>
                                     </tr>
                                     <tr>
                                         <th class="theme-bg-light"><b>disable_epic_overlay &lttrue-false&gt</b></th>
@@ -1165,6 +1173,10 @@
                                     <tr>
                                         <th class="theme-bg-light"><b>interface_vote_to_foreit</b></th>
                                         <td>Votes to forfeit in the current online match you are in.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>interface_click_startmenu</b></th>
+                                        <td>Clicks the start menu screen for you to progress to the main menu.</td>
                                     </tr>
                                     <tr>
                                         <th class="theme-bg-light"><b>matchmaking_cancel</b></th>
