--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				<li class="list-inline-item"><a href="https://discord.gg/NmPd4XXTHT"><i class="fab fa-discord fa-fw"></i></a></li>
 			    <li class="list-inline-item"><a href="https://github.com/CodeRedModding"><i class="fab fa-github fa-fw"></i></a></li>
 	        </ul>
-            <h4 class="copyright" style="color:#80848E">CodeRed is a product created and owned by ItsBranK.</h4>
+            <h4 class="copyright" style="color:#80848E">CodeRed is a product created and owned by ItsBrank.</h4>
 	    </div>
     </footer>
     <script src="assets/plugins/popper.min.js"></script>
