--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-7">Version 2.8.7</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-6">Version 2.8.6</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-5">Version 2.8.5</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-4">Version 2.8.4</a></li>
@@ -203,6 +204,17 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-7">
+                            <h2 class="section-heading">Version 2.8.7 (December 9th 2025)</h2>
+                            <h5>- Removed the <code>interface_disable_roulette</code> setting as its built into the game now.</h5>
+                            <h5>- Added the new "Parc de Paris (Day)" map to Discord rich presence integration and the main menu background changer.</h5>
+                            <h5>- Added the new "Mannfield (Quads)" map to Discord rich presence integration.</h5>
+                            <h5>- Fixed the "Ranked Quads" playlist not displaying mmr needed to rank up or down in the tracker window.</h5>
+                            <h5>- Improvements and bug fixes the custom avatar system, along with improvements to platform and steam avatars.</h5>
+                            <h5>- Upgraded the internal ImGui framework to version 1.92.5.</h5>
+                            <h5>- Updated the internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-6">
                             <h2 class="section-heading">Version 2.8.6 (November 20th 2025)</h2>
