--- a/changelog.html
+++ b/changelog.html
@@ -211,7 +211,7 @@
                             <h5>- Added the new "Parc de Paris (Day)" map to Discord rich presence integration and the main menu background changer.</h5>
                             <h5>- Added the new "Mannfield (Quads)" map to Discord rich presence integration.</h5>
                             <h5>- Fixed the "Ranked Quads" playlist not displaying mmr needed to rank up or down in the tracker window.</h5>
-                            <h5>- Improvements and bug fixes the custom avatar system, along with improvements to platform and steam avatars.</h5>
+                            <h5>- Experimental changes and bug fixes the custom avatar system, along with improvements to platform and steam avatars.</h5>
                             <h5>- Upgraded the internal ImGui framework to version 1.92.5.</h5>
                             <h5>- Updated the internal SDK to the latest version of Rocket League.</h5>
                         </section>
