--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-8">Version 2.8.8</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-7">Version 2.8.7</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-6">Version 2.8.6</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-5">Version 2.8.5</a></li>
@@ -204,6 +205,17 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-8">
+                        <h2 class="section-heading">Version 2.8.8 (December 19th 2025)</h2>
+                            <h5>- Added several new settings that let you customize the stadium colors on the main menu.</h5>
+                            <h5>- Added a new setting <code>interface_show_prices</code>, which shows the actual price of items in the shop next to their credits.</h5>
+                            <h5>- Added support for the "Ranked Heatseeker" playlist for mmr needed to rank up or down in the tracker window.</h5>
+                            <h5>- Added customization support for the "Ranked Heatseeker" playlist in the "Textures" tab.</h5>
+                            <h5>- Fixed a couple custom widgets in the dashboard not switching between being enabled and disabled properly.</h5>
+                            <h5>- Fixed your CodeRed loadouts accent color not applying in certain senarios.</h5>
+                            <h5>- More safety improvements related to encoding and decoding UTF32 characters.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-7">
                             <h2 class="section-heading">Version 2.8.7 (December 9th 2025)</h2>
