--- a/documentation.html
+++ b/documentation.html
@@ -1350,12 +1350,16 @@
                                         <td>Draws an fps counter in the corner of your screen.</td>
                                     </tr>
                                     <tr>
+                                        <th class="theme-bg-light"><b>interface_disable_rocketpass &lttrue-false&gt</b></th>
+                                        <td>Disable rocket pass xp, item, and level progress.</td>
+                                    </tr>
+                                    <tr>
                                         <th class="theme-bg-light"><b>interface_disable_itemshop &lttrue-false&gt</b></th>
                                         <td>Hide the item shop button on the main menu.</td>
                                     </tr>
                                     <tr>
-                                        <th class="theme-bg-light"><b>interface_disable_rocketpass &lttrue-false&gt</b></th>
-                                        <td>Disable rocket pass xp, item, and level progress.</td>
+                                        <th class="theme-bg-light"><b>interface_show_prices &lttrue-false&gt</b></th>
+                                        <td>Show actual prices next to their credit price for items in the shop, this already exists in game for EU residents but Psyonix hides it for the rest of the world.</td>
                                     </tr>
                                     <tr>
                                         <th class="theme-bg-light"><b>interface_hide_seasonranks &lttrue-false&gt</b></th>
@@ -1968,6 +1972,56 @@
                                     <tr>
                                         <th class="theme-bg-light"><b>stadium_orange_hud_enabled &lttrue-false&gt</b></th>
                                         <td>The stadium colors to override on the orange team in online matches.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_blue_enabled &lttrue-false&gt</b></th>
+                                        <td>Enable overriding the blue stadium colors on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_blue_stadium &lt#1873FF&gt</b></th>
+                                        <td>The stadium colors to override on the blue team on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_blue_primary_enabled &lttrue-false&gt</b></th>
+                                        <td>Enable using custom primary paint colors on the blue team on the main menu.</td>
+                                    </tr>
+
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_blue_primary &lt#FFFFFF&gt</b></th>
+                                        <td>The blue primary paint colors to apply to your car on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_blue_accent_enabled &lttrue-false&gt</b></th>
+                                        <td>Enable using custom accent paint colors on the blue team on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_blue_accent &lt#FFFFFF&gt</b></th>
+                                        <td>The blue accent paint colors to apply to your car on the main menu.</td>
+                                    </tr>
+                                                                        <tr>
+                                        <th class="theme-bg-light"><b>menu_orange_enabled &lttrue-false&gt</b></th>
+                                        <td>Enable overriding the orange stadium colors on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_orange_stadium &lt#1873FF&gt</b></th>
+                                        <td>The stadium colors to override on the orange team on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_orange_primary_enabled &lttrue-false&gt</b></th>
+                                        <td>Enable using custom primary paint colors on the orange team on the main menu.</td>
+                                    </tr>
+
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_orange_primary &lt#FFFFFF&gt</b></th>
+                                        <td>The orange primary paint colors to apply to your car on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_orange_accent_enabled &lttrue-false&gt</b></th>
+                                        <td>Enable using custom accent paint colors on the orange team on the main menu.</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="theme-bg-light"><b>menu_orange_accent &lt#FFFFFF&gt</b></th>
+                                        <td>The orange accent paint colors to apply to your car on the main menu.</td>
                                     </tr>
                                 </tbody>
                             </table>
