--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-9">Version 2.8.9</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-8">Version 2.8.8</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-7">Version 2.8.7</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-6">Version 2.8.6</a></li>
@@ -205,6 +206,12 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-8-9">
+                        <h2 class="section-heading">Version 2.8.9 (December 23rd 2025)</h2>
+                            <h5>- Internal bug fixes and optimizations related to API requests.</h5>
+                            <h5>- Minor spelling fixes and naming consistency changes in the dashboard.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-8">
                         <h2 class="section-heading">Version 2.8.8 (December 19th 2025)</h2>
