--- a/documentation.html
+++ b/documentation.html
@@ -495,6 +495,10 @@
                                         <td>Execute a Unreal Engine command with the given arguments.</td>
                                     </tr>
                                     <tr>
+                                        <th class="theme-bg-light"><b>unreal_log &ltarguments&gt</b></th>
+                                        <td>Prints the given arguments to your Launch.log file.</td>
+                                    </tr>
+                                    <tr>
                                         <th class="theme-bg-light"><b>open_folder</b></th>
                                         <td>Opens a folder on your computer with the given arguments.</td>
                                     </tr>
