--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-0">Version 2.9.0</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-9">Version 2.8.9</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-8">Version 2.8.8</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-7">Version 2.8.7</a></li>
@@ -206,6 +207,15 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-9-0">
+                        <h2 class="section-heading">Version 2.9.0 (January 7th 2025)</h2>
+                            <h5>- Major overhaul of the loadout system, it is now much more optimized and seamless, and you can now change items in real time in the middle of games.</h5>
+                            <h5>- Added a new command <code>unreal_log</code>, which lets you print strings to your "Launch.log" file with the arguments you give it.</h5>
+                            <h5>- Fixed multiple issues of the loadout anonymizer sometimes not removing or overwriting products on players cars.</h5>
+                            <h5>- Fixed HUD colors in online game overriding to black if you didn't have custom ones set the "Online" tab.</h5>
+                            <h5>- Performance optimizations related to both loadouts and unreal engine function calls.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-8-9">
                         <h2 class="section-heading">Version 2.8.9 (December 23rd 2025)</h2>
