--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-1">Version 2.9.1</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-0">Version 2.9.0</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-9">Version 2.8.9</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-8">Version 2.8.8</a></li>
@@ -207,6 +208,16 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-9-1">
+                        <h2 class="section-heading">Version 2.9.1 (January 12th 2025)</h2>
+                        <h5>- Fixed the freeplay ball hotkeys not working if you executed the <code>training_open_freeplay</code> command while in a workshop map.</h5>
+                        <h5>- Fixed animated and universal decals not being replaced by the loadout anonymizer.</h5>
+                        <h5>- Fixed your CodeRed profile items not reapplying after using the <code>inventory_async</code> command.</h5>
+                        <h5>- Fixed custom post process effects not resetting to default after disabling them.</h5>
+                        <h5>- Fixed custom titles not equipping while in the games default tutorial modes.</h5>
+                        <h5>- Bug fixes and improvements related to the main menu background changer.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-9-0">
                         <h2 class="section-heading">Version 2.9.0 (January 7th 2025)</h2>
